--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: url("../assets/background.jpg") no-repeat top center/cover;
+    background: url("../assets/background3.jpg") no-repeat top center/cover;
     height: 100vh;
     color: #f2f2f2;
 }
